# TelescopeML

./: .all-contributorsrc  .buildinfo  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cite.html  code.html  enviroment_nobuild.yml  environment.yml  environment_v2.yml  genindex.html  index.html  installation.html  knowledgebase.html  objects.inv  publications.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tutorials.html
TelescopeML/: DataMaster.py  DataProcessor.py  DeepBuilder.py  DeepTrainer.py  DeepTuner.py  IO_utils.py  LIMEXplainer.py  Predictor.py  StatVisAnalyzer.py  __init__.py  __version__.py
TelescopeML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_sources/: cite.rst.txt  code.rst.txt  index.rst.txt  installation.rst.txt  knowledgebase.rst.txt  tutorials.rst.txt
bohb_cnn_tuner/: cnn_bohb_tuning2_Copy1.py  cnn_bohb_tuning3.py  cnn_bohb_tuning4.py  cnn_bohb_tuning5.py  cnn_bohb_tuning7.py  cnn_bohb_tuning9.py
bohb_model_tuner/: Tune_CNN_hyperparameters_BOHB.py  Tune_CNN_hyperparameters_BOHB_2.py  check_bohb_results.ipynb  clean_file.py  cnn_bohb_tuning6.py  cnn_bohb_tuning9.py  submit.sh  submit_v2.sh
bohb_optimizer/: cnn_bohb_tuning2.py  cnn_bohb_tuning8.py
codes/: TrainCNNRegression.py  check_results_regression_2.py  train_regression.py
docs/: Makefile  code.html  code.rst  conf.py  index.rst  installation.html  installation.rst  knowledgebase.html  knowledgebase.rst  publications.html  py-modindex.html  search.html  tutorials.html  tutorials.rst
joss/: paper.bib  paper.md
notebooks/: BOHB_CNN_v15_xNorm_yStand_WithMinMax.ipynb  Data_Exploration.ipynb  Predict_BrownDwarf_Parameters.ipynb  Train_CNN_BOHB_Tuned_Parameters.ipynb  Train_CNN_Model.ipynb  Train_CNN_ToyModel-test_buildModel.ipynb  Train_CNN_ToyModel.ipynb  Train_CNN_ToyModel_v2-Copy1.ipynb  Train_CNN_ToyModel_v2.ipynb  Train_CNN_withTunedParameters-Copy1.ipynb  Train_CNN_withTunedParameters-Copy2.ipynb  Train_CNN_withTunedParameters.ipynb  Tuned_CNN_v18_xNorm_yStand_WithMinMax.ipynb  Tuned_CNN_v19_xNorm_yStand_WithMinMax.ipynb  Tuned_CNN_v20_xNorm_yStand_WithMinMax-Copy1.ipynb  Tuned_CNN_v20_xNorm_yStand_WithMinMax.ipynb  Tuned_CNN_v29_xStand_yStand_WithMin_ToyML.ipynb  Tuned_CNN_xStand_yStand_WithMinMax_ToyML.ipynb  Untitled.ipynb  Untitled1.ipynb  XGBRegressor_MultiOutput-Regression-v4.ipynb
store/: cite.html  code.html  environment3.yml  environment_short.yml  genindex.html  index.html  installation.html  knowledgebase.html  objects.inv  py-modindex.html  search.html  tutorials.html
telescopeML/: DeepRegBuilder.py  DeepRegTrainer.py  ObservPredictor.py  StatVisAnalyzer.py  (+12 more)
telescopeML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+297 files in other folders)
