[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "TelescopeML"
version = "0.0.0"
authors = [
  { name="Ehsan (Sam) Gharib-Nezhad", email="e.gharibnezhad@gmail.com" },
]
description = 'Deep Convolutional Neural Networks and Machine Learning Models for Analyzing Stellar and Exoplanetary Telescope Spectra'
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://ehsangharibnezhad.github.io/TelescopeML"
"Bug Tracker" = "https://ehsangharibnezhad.github.io/TelescopeML"
