[metadata]
name = TelescopeML
version = 0.0.0
summary = Deep Convolutional Neural Networks and Machine Learning Models for Analyzing Stellar and Exoplanetary Telescope Spectra
description-file = README.md
author = Ehsan (Sam) Gharib-Nezhad
author-email = e.gharibnezhad@gmail.com
home-page = https://ehsangharibnezhad.github.io
url = https://ehsangharibnezhad.github.io/TelescopeML
; Add this line to the classifier options if your project supports Python 3:
Programming Language :: Python :: 3
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3.0
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy, Computer Science
	Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = 
	TelescopeML
    
# [install_data]
# pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files

[zest.releaser]
release = no

[backwards_compat]
use_2to3 = True
zip_safe = False
